--- a/13_numerical_optimization/mhe.ipynb
+++ b/13_numerical_optimization/mhe.ipynb
@@ -141,19 +141,8 @@
    "execution_count": null,
    "id": "3513eb00",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MHE completed. Estimated 80 states.\n",
-      "Example — True pos: 1.652, Observed: 1.575, Est pos: 1.632\n",
-      "Example — True vel: 0.070, Est vel: 0.363 (velocity is unobserved!)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Run MHE over the full dataset\n",
     "pos_est = []\n",
     "vel_est = []\n",
     "ts_est = []\n",
@@ -161,6 +150,7 @@
     "for start in range(len(ts) - N):\n",
     "    y_window = y_obs[start : start + N]\n",
     "    x_states = solve_mhe(y_window, k=k_true, b=b_true)\n",
+    "\n",
     "    # Take the last state estimate as the current estimate\n",
     "    pos_est.append(float(x_states[-1, 0]))\n",
     "    vel_est.append(float(x_states[-1, 1]))\n",
@@ -168,9 +158,7 @@
     "\n",
     "pos_est = jnp.array(pos_est)\n",
     "vel_est = jnp.array(vel_est)\n",
-    "ts_est = jnp.array(ts_est)\n",
-    "\n",
-    "print(f\"Estimated positions shape: {pos_est.shape}, velocities shape: {vel_est.shape}\")"
+    "ts_est = jnp.array(ts_est)"
    ]
   },
   {
