Update opt-control code

--- a/14_optimization_control/lecture/opt_control.ipynb
+++ b/14_optimization_control/lecture/opt_control.ipynb
@@ -31,15 +31,15 @@
     "\n",
     "# Parameters\n",
     "T_final = 50\n",
-    "N = 300           # number of control points\n",
-    "k_f = 0.2         # friction/damping coefficient\n",
-    "k_u = 1.0         # control gain\n",
-    "v_h = 0.5         # human walking speed (m/s)\n",
-    "d_target = 1.5    # target distance (m)\n",
+    "N = 300  # number of control points\n",
+    "k_f = 0.2  # friction/damping coefficient\n",
+    "k_u = 1.0  # control gain\n",
+    "v_h = 0.5  # human walking speed (m/s)\n",
+    "d_target = 1.5  # target distance (m)\n",
     "\n",
     "# Initial conditions\n",
-    "d_0 = 3.0         # initial distance (m)\n",
-    "v_r_0 = 0.0       # initial robot velocity (m/s)\n",
+    "d_0 = 3.0  # initial distance (m)\n",
+    "v_r_0 = 0.0  # initial robot velocity (m/s)\n",
     "\n",
     "t_grid = jnp.linspace(0, T_final, N + 1)"
    ]
@@ -65,6 +65,7 @@
     "    dv_r_dt = -k_f * v_r + k_u * u\n",
     "    return jnp.array([dd_dt, dv_r_dt])\n",
     "\n",
+    "\n",
     "@jax.jit\n",
     "def solve_and_cost(u_params):\n",
     "    \"\"\"Solve the ODE forward and compute the total cost.\"\"\"\n",
@@ -75,7 +76,9 @@
     "    sol = diffrax.diffeqsolve(\n",
     "        diffrax.ODETerm(ode),\n",
     "        diffrax.Tsit5(),\n",
-    "        t0=0, t1=T_final, dt0=T_final / N,\n",
+    "        t0=0,\n",
+    "        t1=T_final,\n",
+    "        dt0=T_final / N,\n",
     "        y0=jnp.array([d_0, v_r_0]),\n",
     "        args=u_clipped,\n",
     "        saveat=diffrax.SaveAt(ts=t_grid),\n",
@@ -84,11 +87,11 @@
     "    d_sol = sol.ys[:, 0]\n",
     "\n",
     "    # Running cost: integral of u^2 + (d - d_target)^2\n",
-    "    stage_costs = u_clipped**2 + (d_sol - d_target)**2\n",
+    "    stage_costs = u_clipped**2 + (d_sol - d_target) ** 2\n",
     "    running_cost = jnp.trapezoid(stage_costs, t_grid)\n",
     "\n",
     "    # Terminal cost\n",
-    "    terminal_cost = (d_sol[-1] - d_target)**2\n",
+    "    terminal_cost = (d_sol[-1] - d_target) ** 2\n",
     "\n",
     "    return running_cost + terminal_cost"
    ]
@@ -116,9 +119,11 @@
    "source": [
     "optimizer = optax.adam(learning_rate=0.01)\n",
     "\n",
+    "\n",
     "@jax.jit\n",
     "def optimize(u_params, opt_state, n_steps=2000):\n",
     "    \"\"\"Run n_steps of Adam optimization using jax.lax.scan.\"\"\"\n",
+    "\n",
     "    def step(carry, _):\n",
     "        u, opt_state = carry\n",
     "        cost, grads = jax.value_and_grad(solve_and_cost)(u)\n",
@@ -132,17 +137,28 @@
     "    )\n",
     "    return u_opt, costs\n",
     "\n",
+    "\n",
     "# Run optimization\n",
     "u_params = jnp.zeros(N + 1)\n",
     "opt_state = optimizer.init(u_params)\n",
     "u_opt, costs = optimize(u_params, opt_state)\n",
-    "print(f\"Final cost: {costs[-1]:.4f}\")\n",
-    "\n",
+    "print(f\"Final cost: {costs[-1]:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2a9299fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Extract solution by solving the ODE one final time\n",
     "sol = diffrax.diffeqsolve(\n",
     "    diffrax.ODETerm(ode),\n",
     "    diffrax.Tsit5(),\n",
-    "    t0=0, t1=T_final, dt0=T_final / N,\n",
+    "    t0=0,\n",
+    "    t1=T_final,\n",
+    "    dt0=T_final / N,\n",
     "    y0=jnp.array([d_0, v_r_0]),\n",
     "    args=u_opt,\n",
     "    saveat=diffrax.SaveAt(ts=t_grid),\n",
@@ -155,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1d4003161916e1e4",
    "metadata": {
     "collapsed": false
@@ -176,7 +192,9 @@
     "fig, axes = plt.subplots(3, 1, figsize=(8, 8), sharex=True)\n",
     "\n",
     "axes[0].plot(t_grid, d_sol, label=\"Distance $d(t)$\")\n",
-    "axes[0].axhline(d_target, color=\"r\", linestyle=\"--\", label=f\"Target $d_{{target}}={d_target}$\")\n",
+    "axes[0].axhline(\n",
+    "    d_target, color=\"r\", linestyle=\"--\", label=f\"Target $d_{{target}}={d_target}$\"\n",
+    ")\n",
     "axes[0].set_ylabel(\"Distance (m)\")\n",
     "axes[0].legend()\n",
     "\n",
