--- a/14_optimization_control/lecture/opt_control_casadi.ipynb
+++ b/14_optimization_control/lecture/opt_control_casadi.ipynb
@@ -13,121 +13,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b98255d37017b52",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-05T11:48:48.445592Z",
-     "start_time": "2024-03-05T11:48:48.436817Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import casadi as ca\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Parameters\n",
-    "T_final = 50\n",
-    "N = 300  # number of discretization intervals\n",
-    "dt = T_final / N\n",
-    "\n",
-    "k_f = 0.2  # friction/damping coefficient\n",
-    "k_u = 1.0  # control gain\n",
-    "v_h = 0.5  # human walking speed (m/s)\n",
-    "d_target = 1.5  # target distance (m)\n",
-    "\n",
-    "# Initial conditions\n",
-    "d_0 = 3.0  # initial distance (m)\n",
-    "v_r_0 = 0.0  # initial robot velocity (m/s)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1abb0428",
+   "id": "27415ae1",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e6cd62ec5c83f4c",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-05T11:54:04.826273Z",
-     "start_time": "2024-03-05T11:54:04.818258Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Define the ODE: x = [d, v_r], u = control input\n",
-    "def ode(x, u):\n",
-    "    d = x[0]\n",
-    "    v_r = x[1]\n",
-    "    dd_dt = v_h - v_r\n",
-    "    dv_r_dt = -k_f * v_r + k_u * u\n",
-    "    return ca.vertcat(dd_dt, dv_r_dt)\n",
-    "\n",
-    "\n",
-    "# Build the NLP using CasADi's Opti interface\n",
-    "opti = ca.Opti()\n",
-    "\n",
-    "# Decision variables: states and controls at each grid point\n",
-    "X = opti.variable(2, N + 1)  # states: [d; v_r] at t_0 ... t_N\n",
-    "U = opti.variable(1, N + 1)  # control u at t_0 ... t_N\n",
-    "\n",
-    "# Initial conditions\n",
-    "opti.subject_to(X[0, 0] == d_0)\n",
-    "opti.subject_to(X[1, 0] == v_r_0)\n",
-    "\n",
-    "# Control bounds\n",
-    "opti.subject_to(opti.bounded(-1.0, U, 1.0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6020005f23db07f",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-05T11:54:05.927202Z",
-     "start_time": "2024-03-05T11:54:05.921326Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Dynamics constraints (backward Euler) and running cost\n",
-    "cost = 0\n",
-    "for k in range(N):\n",
-    "    # Backward Euler: x_{k+1} - x_k = dt * f(x_{k+1}, u_{k+1})\n",
-    "    x_next = X[:, k + 1]\n",
-    "    u_next = U[:, k + 1]\n",
-    "    opti.subject_to(x_next - X[:, k] == dt * ode(x_next, u_next))\n",
-    "\n",
-    "    # Running cost (trapezoidal quadrature to approximate the integral)\n",
-    "    stage_k = U[:, k] ** 2 + (X[0, k] - d_target) ** 2\n",
-    "    stage_k1 = u_next**2 + (x_next[0] - d_target) ** 2\n",
-    "    cost += 0.5 * dt * (stage_k + stage_k1)\n",
-    "\n",
-    "# Terminal cost\n",
-    "cost += (X[0, N] - d_target) ** 2\n",
-    "\n",
-    "opti.minimize(cost)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ae107beea54fc161",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-05T11:54:06.837033Z",
-     "start_time": "2024-03-05T11:54:06.834122Z"
-    },
-    "collapsed": false
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -144,107 +31,57 @@
     }
    ],
    "source": [
+    "import casadi as ca\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "# Parameters\n",
+    "T_final = 50\n",
+    "N = 300\n",
+    "dt = T_final / N\n",
+    "k_f, k_u, v_h, d_target = 0.2, 1.0, 0.5, 1.5\n",
+    "d_0, v_r_0 = 3.0, 0.0\n",
+    "\n",
+    "\n",
+    "# Define the ODE\n",
+    "def ode(x, u):\n",
+    "    dd_dt = v_h - x[1]\n",
+    "    dv_r_dt = -k_f * x[1] + k_u * u\n",
+    "    return ca.vertcat(dd_dt, dv_r_dt)\n",
+    "\n",
+    "\n",
+    "# Build the NLP\n",
+    "opti = ca.Opti()\n",
+    "X = opti.variable(2, N + 1)  # states: [d; v_r]\n",
+    "U = opti.variable(1, N + 1)  # control u\n",
+    "\n",
+    "# Initial conditions and bounds\n",
+    "opti.subject_to(X[0, 0] == d_0)\n",
+    "opti.subject_to(X[1, 0] == v_r_0)\n",
+    "opti.subject_to(opti.bounded(-1.0, U, 1.0))\n",
+    "\n",
+    "# Dynamics constraints (backward Euler) and cost\n",
+    "cost = 0\n",
+    "for k in range(N):\n",
+    "    x_next = X[:, k + 1]\n",
+    "    u_next = U[:, k + 1]\n",
+    "    opti.subject_to(x_next - X[:, k] == dt * ode(x_next, u_next))\n",
+    "    stage_k = U[:, k] ** 2 + (X[0, k] - d_target) ** 2\n",
+    "    stage_k1 = u_next**2 + (x_next[0] - d_target) ** 2\n",
+    "    cost += 0.5 * dt * (stage_k + stage_k1)\n",
+    "\n",
+    "cost += (X[0, N] - d_target) ** 2  # terminal cost\n",
+    "opti.minimize(cost)\n",
+    "\n",
     "# Solve with IPOPT\n",
     "opti.solver(\"ipopt\", {\"print_time\": False}, {\"print_level\": 0})\n",
-    "sol = opti.solve()\n",
-    "\n",
-    "# Extract solution\n",
-    "t_grid = np.linspace(0, T_final, N + 1)\n",
-    "d_sol = sol.value(X[0, :]).flatten()\n",
-    "v_r_sol = sol.value(X[1, :]).flatten()\n",
-    "u_sol = sol.value(U).flatten()"
+    "sol = opti.solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "588178485899749e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-05T11:54:07.549837Z",
-     "start_time": "2024-03-05T11:54:07.540838Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.        ,  1.00000001,  1.00000001,  1.        ,  1.        ,\n",
-       "        1.        ,  0.99999998,  0.98891489,  0.76567051,  0.57324873,\n",
-       "        0.40983616,  0.27329484,  0.16128435,  0.07136127,  0.00106011,\n",
-       "       -0.05204207, -0.09027589, -0.11584242, -0.13078704, -0.13698253,\n",
-       "       -0.13611994, -0.12970575, -0.11906419, -0.1053434 , -0.08952462,\n",
-       "       -0.07243352, -0.05475287, -0.03703606, -0.01972087, -0.0031432 ,\n",
-       "        0.01244966,  0.0268864 ,  0.04005981,  0.05191593,  0.06244414,\n",
-       "        0.07166831,  0.07963893,  0.08642631,  0.0921147 ,  0.09679728,\n",
-       "        0.10057206,  0.10353846,  0.10579458,  0.10743515,  0.10854989,\n",
-       "        0.10922241,  0.10952946,  0.10954049,  0.10931756,  0.10891531,\n",
-       "        0.10838126,  0.1077561 ,  0.10707421,  0.10636407,  0.10564887,\n",
-       "        0.10494705,  0.10427282,  0.10363676,  0.10304626,  0.10250609,\n",
-       "        0.10201876,  0.10158499,  0.10120403,  0.10087401,  0.10059224,\n",
-       "        0.10035539,  0.10015976,  0.10000143,  0.09987639,  0.09978067,\n",
-       "        0.09971042,  0.09966199,  0.09963196,  0.09961718,  0.09961481,\n",
-       "        0.09962229,  0.09963737,  0.09965808,  0.09968273,  0.0997099 ,\n",
-       "        0.09973839,  0.09976724,  0.09979567,  0.09982308,  0.09984901,\n",
-       "        0.09987315,  0.09989529,  0.09991531,  0.09993318,  0.0999489 ,\n",
-       "        0.09996256,  0.09997425,  0.09998411,  0.09999228,  0.09999891,\n",
-       "        0.10000418,  0.10000823,  0.10001124,  0.10001333,  0.10001467,\n",
-       "        0.10001536,  0.10001554,  0.1000153 ,  0.10001474,  0.10001394,\n",
-       "        0.10001297,  0.10001189,  0.10001075,  0.10000959,  0.10000844,\n",
-       "        0.10000732,  0.10000627,  0.10000528,  0.10000437,  0.10000355,\n",
-       "        0.10000281,  0.10000217,  0.1000016 ,  0.10000112,  0.10000071,\n",
-       "        0.10000036,  0.10000009,  0.09999987,  0.09999969,  0.09999957,\n",
-       "        0.09999948,  0.09999942,  0.09999938,  0.09999937,  0.09999938,\n",
-       "        0.0999994 ,  0.09999943,  0.09999947,  0.09999951,  0.09999956,\n",
-       "        0.0999996 ,  0.09999965,  0.0999997 ,  0.09999974,  0.09999978,\n",
-       "        0.09999982,  0.09999985,  0.09999988,  0.09999991,  0.09999993,\n",
-       "        0.09999995,  0.09999997,  0.09999998,  0.09999999,  0.1       ,\n",
-       "        0.10000001,  0.10000002,  0.10000002,  0.10000002,  0.10000003,\n",
-       "        0.10000003,  0.10000003,  0.10000003,  0.10000003,  0.10000003,\n",
-       "        0.10000003,  0.10000003,  0.10000002,  0.10000002,  0.10000002,\n",
-       "        0.10000002,  0.10000002,  0.10000002,  0.10000002,  0.10000002,\n",
-       "        0.10000002,  0.10000001,  0.10000001,  0.10000001,  0.10000001,\n",
-       "        0.1       ,  0.1       ,  0.09999999,  0.09999998,  0.09999998,\n",
-       "        0.09999997,  0.09999996,  0.09999994,  0.09999993,  0.09999991,\n",
-       "        0.09999989,  0.09999987,  0.09999985,  0.09999983,  0.09999981,\n",
-       "        0.09999979,  0.09999976,  0.09999974,  0.09999972,  0.09999971,\n",
-       "        0.0999997 ,  0.09999969,  0.0999997 ,  0.09999971,  0.09999974,\n",
-       "        0.09999978,  0.09999984,  0.09999993,  0.10000003,  0.10000017,\n",
-       "        0.10000033,  0.10000053,  0.10000076,  0.10000104,  0.10000135,\n",
-       "        0.10000171,  0.10000211,  0.10000255,  0.10000303,  0.10000354,\n",
-       "        0.10000409,  0.10000465,  0.10000522,  0.10000578,  0.10000631,\n",
-       "        0.10000679,  0.1000072 ,  0.10000748,  0.10000761,  0.10000755,\n",
-       "        0.10000723,  0.10000661,  0.10000562,  0.10000419,  0.10000225,\n",
-       "        0.09999973,  0.09999654,  0.0999926 ,  0.09998785,  0.0999822 ,\n",
-       "        0.09997559,  0.09996798,  0.09995931,  0.09994959,  0.09993883,\n",
-       "        0.09992708,  0.09991444,  0.09990107,  0.09988716,  0.09987303,\n",
-       "        0.09985903,  0.09984563,  0.09983341,  0.09982305,  0.09981537,\n",
-       "        0.09981133,  0.09981201,  0.09981865,  0.09983264,  0.0998555 ,\n",
-       "        0.09988891,  0.09993464,  0.09999456,  0.10007063,  0.10016481,\n",
-       "        0.10027903,  0.10041511,  0.1005747 ,  0.10075916,  0.10096945,\n",
-       "        0.10120599,  0.1014685 ,  0.10175582,  0.10206575,  0.10239477,\n",
-       "        0.10273785,  0.10308819,  0.10343695,  0.10377299,  0.10408259,\n",
-       "        0.10434916,  0.10455304,  0.10467125,  0.10467732,  0.10454117,\n",
-       "        0.10422906,  0.10370369,  0.10292436,  0.10184734,  0.10042639,\n",
-       "        0.09861352,  0.09636002,  0.0936177 ,  0.0903406 ,  0.08648694,\n",
-       "        0.08202153,  0.07691861,  0.07116516,  0.0647647 ,  0.05774159,\n",
-       "        0.05014582,  0.04205833,  0.03359674,  0.02492156,  0.01624263,\n",
-       "        0.01565173])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "u_sol"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e54b4cb970500977",
    "metadata": {
     "ExecuteTime": {
@@ -267,6 +104,11 @@
    ],
    "source": [
     "fig, axes = plt.subplots(3, 1, figsize=(8, 8), sharex=True)\n",
+    "\n",
+    "t_grid = np.linspace(0, T_final, N + 1)\n",
+    "d_sol = sol.value(X[0, :]).flatten()\n",
+    "v_r_sol = sol.value(X[1, :]).flatten()\n",
+    "u_sol = sol.value(U).flatten()\n",
     "\n",
     "axes[0].plot(t_grid, d_sol, label=\"Distance $d(t)$\")\n",
     "axes[0].axhline(\n",
