--- a/14_optimization_control/lecture/mpc_casadi.ipynb
+++ b/14_optimization_control/lecture/mpc_casadi.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e75a502c",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
     "\n",
     "\n",
     "def solve_mpc(state, ref, dt=0.1, l=1.0):\n",
-    "    \"\"\"Solve the MPC problem using CasADi + IPOPT.\"\"\"\n",
+    "    \"\"\"Solve the MPC problem using CasADi and IPOPT.\"\"\"\n",
     "    N = 100\n",
     "    horizon = ref.shape[0]\n",
     "    DT = horizon * dt\n",
