--- a/15_cont_verification/lecture/stl_jax.ipynb
+++ b/15_cont_verification/lecture/stl_jax.ipynb
@@ -100,9 +100,13 @@
     "\n",
     "print(\"G(x > 0):\")\n",
     "print(f\"Robustness trace for `rob_sat`: {rob_sat}\")\n",
-    "print(f\"Overall robustness: {rob_sat[0]:.2f}. Specification {'SATISFIED' if rob_sat[0] > 0 else 'VIOLATED'}\")\n",
+    "print(\n",
+    "    f\"Overall robustness: {rob_sat[0]:.2f}. Specification {'SATISFIED' if rob_sat[0] > 0 else 'VIOLATED'}\"\n",
+    ")\n",
     "print(f\"\\nRobustness trace for `rob_vio`: {rob_vio}\")\n",
-    "print(f\"Overall robustness: {rob_vio[0]:.2f}. Specification {'SATISFIED' if rob_vio[0] > 0 else 'VIOLATED'}\")\n",
+    "print(\n",
+    "    f\"Overall robustness: {rob_vio[0]:.2f}. Specification {'SATISFIED' if rob_vio[0] > 0 else 'VIOLATED'}\"\n",
+    ")\n",
     "# G(x > 0):\n",
     "# Robustness trace for `rob_sat`: [1. 1. 1. 1. 1. 2.]\n",
     "# Overall robustness: 1.00. Specification SATISFIED\n",
@@ -153,10 +157,14 @@
     "\n",
     "print(\"F[0,3](x > 5):\")\n",
     "print(f\"Robustness trace for `rob_sat`: {rob_sat}\")\n",
-    "print(f\"Overall robustness: {rob_sat[0]:.2f}. Specification {'SATISFIED' if rob_sat[0] > 0 else 'VIOLATED'}\")\n",
+    "print(\n",
+    "    f\"Overall robustness: {rob_sat[0]:.2f}. Specification {'SATISFIED' if rob_sat[0] > 0 else 'VIOLATED'}\"\n",
+    ")\n",
     "\n",
     "print(f\"\\nRobustness trace for `rob_vio`: {rob_vio}\")\n",
-    "print(f\"Overall robustness: {rob_vio[0]:.2f}. Specification {'SATISFIED' if rob_vio[0] > 0 else 'VIOLATED'}\")\n",
+    "print(\n",
+    "    f\"Overall robustness: {rob_vio[0]:.2f}. Specification {'SATISFIED' if rob_vio[0] > 0 else 'VIOLATED'}\"\n",
+    ")\n",
     "# F[0,3](x > 5):\n",
     "# Robustness trace for `rob_sat`: [ 1.  1.  1. -1. -2. -3.]\n",
     "# Overall robustness: 1.00. Specification SATISFIED\n",
@@ -193,10 +201,14 @@
     "\n",
     "print(\" F(x > 5):\")\n",
     "print(f\"Robustness trace for `rob_sat_ub`: {rob_sat_ub}\")\n",
-    "print(f\"Overall robustness: {rob_sat_ub[0]:.2f}. Specification {'SATISFIED' if rob_sat_ub[0] > 0 else 'VIOLATED'}\")\n",
+    "print(\n",
+    "    f\"Overall robustness: {rob_sat_ub[0]:.2f}. Specification {'SATISFIED' if rob_sat_ub[0] > 0 else 'VIOLATED'}\"\n",
+    ")\n",
     "\n",
     "print(f\"\\nRobustness trace for `rob_vio_ub`: {rob_vio_ub}\")\n",
-    "print(f\"Overall robustness: {rob_vio_ub[0]:.2f}. Specification {'SATISFIED' if rob_vio_ub[0] > 0 else 'VIOLATED'}\")\n",
+    "print(\n",
+    "    f\"Overall robustness: {rob_vio_ub[0]:.2f}. Specification {'SATISFIED' if rob_vio_ub[0] > 0 else 'VIOLATED'}\"\n",
+    ")\n",
     "# F(x > 5):\n",
     "# Robustness trace for `rob_sat_ub`: [ 1.  1.  1. -1. -2. -3.]\n",
     "# Overall robustness: 1.00. Specification SATISFIED\n",
@@ -249,10 +261,14 @@
     "\n",
     "print(\"(p > 0) U[0,3] (q > 0):\")\n",
     "print(f\"Robustness trace for `rob_sat`: {rob_sat}\")\n",
-    "print(f\"Overall robustness: {rob_sat[0]:.2f}. Specification {'SATISFIED' if rob_sat[0] > 0 else 'VIOLATED'}\")\n",
+    "print(\n",
+    "    f\"Overall robustness: {rob_sat[0]:.2f}. Specification {'SATISFIED' if rob_sat[0] > 0 else 'VIOLATED'}\"\n",
+    ")\n",
     "\n",
     "print(f\"Robustness trace for `rob_vio`: {rob_vio}\")\n",
-    "print(f\"Overall robustness: {rob_vio[0]:.2f}. Specification {'SATISFIED' if rob_vio[0] > 0 else 'VIOLATED'}\")\n",
+    "print(\n",
+    "    f\"Overall robustness: {rob_vio[0]:.2f}. Specification {'SATISFIED' if rob_vio[0] > 0 else 'VIOLATED'}\"\n",
+    ")\n",
     "# (p > 0) U[0,3] (q > 0):\n",
     "# Robustness trace for `rob_sat`: [ 1.  1.  1. -0. -0. -0.]\n",
     "# Overall robustness: 1.00. Specification SATISFIED\n",
@@ -262,16 +278,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28aa1cec",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "be6d4457",
    "metadata": {},
    "source": [
-    "## Differentiation"
+    "## Differentiability"
    ]
   },
   {
@@ -285,10 +295,7 @@
      "output_type": "stream",
      "text": [
       "Signal:   [1.  2.  0.5 1.5 0.8 1.2]\n",
-      "Gradient: [0. 0. 1. 0. 0. 0.]\n",
-      "\n",
-      "Robustness G(x>0) = min(x) = 0.50, achieved at x[2]=0.5\n",
-      "Increasing x[2] would most improve the overall robustness.\n"
+      "Gradient: [0. 0. 1. 0. 0. 0.]\n"
      ]
     }
    ],
@@ -303,19 +310,14 @@
     "    return rob[0]\n",
     "\n",
     "\n",
-    "# A signal where the tightest point is x[2] = 0.5\n",
     "x_signal = jnp.array([1.0, 2.0, 0.5, 1.5, 0.8, 1.2])\n",
-    "\n",
-    "# Compute gradient via JAX automatic differentiation\n",
     "grad_fn = jax.grad(robustness_fn)\n",
     "gradient = grad_fn(x_signal)\n",
     "\n",
     "print(f\"Signal:   {x_signal}\")\n",
     "print(f\"Gradient: {gradient}\")\n",
-    "print(\n",
-    "    f\"\\nRobustness G(x>0) = min(x) = {robustness_fn(x_signal):.2f}, achieved at x[2]={x_signal[2]}\"\n",
-    ")\n",
-    "print(\"Increasing x[2] would most improve the overall robustness.\")"
+    "# Signal:   [1.  2.  0.5 1.5 0.8 1.2]\n",
+    "# Gradient: [0. 0. 1. 0. 0. 0.]"
    ]
   },
   {
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "3530e5bb",
    "metadata": {},
    "outputs": [
@@ -336,9 +338,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distance trace: [3.  2.8 2.5 2.2 1.8 1.5 1.2 0.9 0.7 0.6]\n",
-      "Robustness trace: [0.10000002 0.10000002 0.10000002 0.10000002 0.10000002 0.10000002\n",
-      " 0.10000002 0.10000002 0.10000002 0.10000002]\n",
       "Overall robustness: 0.1000\n",
       "Specification SATISFIED\n"
      ]
@@ -349,36 +348,29 @@
     "import jax.numpy as jnp\n",
     "from stljax.formula import Predicate, Always, Eventually, Until\n",
     "\n",
-    "# Simulated distance trace (meters) over T=10 time steps\n",
-    "# Robot starts at 3.0m, gradually approaches to 0.6m\n",
+    "\n",
     "T = 10\n",
     "distance = jnp.array([3.0, 2.8, 2.5, 2.2, 1.8, 1.5, 1.2, 0.9, 0.7, 0.6])\n",
     "\n",
     "# Define the STL specification\n",
     "d_pred = Predicate(\"d\", lambda x: x)\n",
-    "\n",
-    "# G(d >= 0.5): always keep at least 0.5m safety distance\n",
-    "safety_spec = Always(d_pred >= 0.5)\n",
-    "\n",
-    "# F[0, T-1](d <= 2.0): come within 2.0m at some point\n",
-    "liveness_spec = Eventually(d_pred <= 2.0, interval=[0, T - 1])\n",
-    "\n",
-    "# Combined specification\n",
-    "phi_hri = safety_spec & liveness_spec\n",
+    "safety_spec = Always(d_pred >= 0.5)  # G(d >= 0.5)\n",
+    "liveness_spec = Eventually(d_pred <= 2.0, interval=[0, T - 1])  # F[0, T-1](d <= 2.0)\n",
+    "phi_combined = safety_spec & liveness_spec\n",
     "\n",
     "# Evaluate robustness\n",
-    "rob_trace = phi_hri(distance)\n",
+    "rob_trace = phi_combined(distance)\n",
     "overall_rob = rob_trace[0]\n",
     "\n",
-    "print(f\"Distance trace: {distance}\")\n",
-    "print(f\"Robustness trace: {rob_trace}\")\n",
     "print(f\"Overall robustness: {overall_rob:.4f}\")\n",
-    "print(f\"Specification {'SATISFIED' if overall_rob > 0 else 'VIOLATED'}\")"
+    "print(f\"Specification {'SATISFIED' if overall_rob > 0 else 'VIOLATED'}\")\n",
+    "# Overall robustness: 0.1000\n",
+    "# Specification SATISFIED"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "0251c608",
    "metadata": {},
    "outputs": [
@@ -386,7 +378,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Violated trace robustness: -0.3000\n",
+      "Overall robustness: -0.3000\n",
       "Specification VIOLATED\n"
      ]
     }
@@ -395,9 +387,11 @@
     "# Violated trace: robot gets too close (below 0.5m at times 6-8)\n",
     "distance_vio = jnp.array([3.0, 2.5, 2.0, 1.5, 1.0, 0.5, 0.3, 0.2, 0.4, 0.6])\n",
     "\n",
-    "rob_trace_vio = phi_hri(distance_vio)\n",
-    "print(f\"Violated trace robustness: {rob_trace_vio[0]:.4f}\")\n",
-    "print(f\"Specification {'SATISFIED' if rob_trace_vio[0] > 0 else 'VIOLATED'}\")"
+    "rob_trace_vio = phi_combined(distance_vio)\n",
+    "print(f\"Overall robustness: {rob_trace_vio[0]:.4f}\")\n",
+    "print(f\"Specification {'SATISFIED' if rob_trace_vio[0] > 0 else 'VIOLATED'}\")\n",
+    "# Violated trace robustness: -0.3000\n",
+    "# Specification VIOLATED"
    ]
   },
   {
@@ -410,36 +404,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gradient of HRI robustness w.r.t. distance trace:\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
-      "\n",
-      "Interpretation:\n",
-      "  Positive gradient at time t: increasing distance at t improves robustness.\n",
-      "  Negative gradient at time t: decreasing distance at t improves robustness.\n",
-      "\n",
-      "Largest gradient at t=9 (d=0.6m, only 0.1m above safety threshold).\n",
-      "The robot should move further away at the end of the interaction.\n"
+      "Gradient of combined robustness w.r.t. distance trace:\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n"
      ]
     }
    ],
    "source": [
-    "def hri_robustness(d):\n",
-    "    rob = phi_hri(d)\n",
+    "def combined_robustness(d):\n",
+    "    rob = phi_combined(d)\n",
     "    return rob[0]\n",
     "\n",
     "\n",
-    "grad_fn = jax.grad(hri_robustness)\n",
+    "grad_fn = jax.grad(combined_robustness)\n",
     "gradient = grad_fn(distance)\n",
     "\n",
-    "print(\"Gradient of HRI robustness w.r.t. distance trace:\")\n",
+    "print(\"Gradient of combined robustness w.r.t. distance trace:\")\n",
     "print(gradient)\n",
-    "print(\"\\nInterpretation:\")\n",
-    "print(\"  Positive gradient at time t: increasing distance at t improves robustness.\")\n",
-    "print(\"  Negative gradient at time t: decreasing distance at t improves robustness.\")\n",
-    "print(\n",
-    "    f\"\\nLargest gradient at t=9 (d=0.6m, only {distance[9] - 0.5:.1f}m above safety threshold).\"\n",
-    ")\n",
-    "print(\"The robot should move further away at the end of the interaction.\")"
+    "# Gradient of combined robustness w.r.t. distance trace:\n",
+    "# [0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]"
    ]
   },
   {
